first version of new shadows/highlights tool

--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -121,6 +121,7 @@ set(RTENGINESOURCEFILES
     pdaflinesfilter.cc
     gamutwarning.cc
     ipsoftlight.cc
+    ipshadowshighlights.cc
     )
 
 if(LENSFUN_HAS_LOAD_DIRECTORY)
