improved CMake test for tcmalloc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -558,9 +558,11 @@ if(ENABLE_TCMALLOC)
     if(TCMALLOC_LIBRARIES)
         message(STATUS "using tcmalloc library in ${TCMALLOC_LIBRARIES}")
     else()
-        set(TCMALLOC_LIBRARIES "" FORCE)
+        set(TCMALLOC_LIBRARIES "" CACHE INTERNAL "" FORCE)
         message(STATUS "tcmalloc not found")
     endif()
+else()
+    set(TCMALLOC_LIBRARIES "" CACHE INTERNAL "" FORCE)
 endif()
 
 add_subdirectory(rtexif)
