continued work on renaming denoise procparams
now compiles, but there are still issues with loading/saving procparams

--- a/rtgui/CMakeLists.txt
+++ b/rtgui/CMakeLists.txt
@@ -45,7 +45,7 @@ set(NONCLISOURCEFILES
     defringe.cc
     diagonalcurveeditorsubgroup.cc
     dirbrowser.cc
-    dirpyrdenoise.cc
+    denoise.cc
     dirpyrequalizer.cc
     distortion.cc
     dynamicprofilepanel.cc
