moved new denoise wrappers to a separate compilation unit

--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -137,6 +137,7 @@ set(RTENGINESOURCEFILES
     labmasks.cc
     ipcbdl.cc
     ipgrain.cc
+    ipdenoise.cc
     )
 
 if(LENSFUN_HAS_LOAD_DIRECTORY)
