--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -320,7 +320,11 @@ set(_exiv2_libs ${EXIV2_LIBRARIES})
 set(EXIV2_LIBRARIES "")
 foreach(l ${_exiv2_libs})
     set(_el "_el-NOTFOUND")
-    find_library(_el ${l} PATHS ${EXIV2_LIBRARY_DIRS} NO_DEFAULT_PATH)
+    if(EXIV2_LIBRARY_DIRS)
+        find_library(_el ${l} PATHS ${EXIV2_LIBRARY_DIRS} NO_DEFAULT_PATH)
+    else()
+        find_library(_el ${l} PATHS ${EXIV2_LIBRARY_DIRS})
+    endif()
     set(EXIV2_LIBRARIES ${EXIV2_LIBRARIES} ${_el})
 endforeach()
 
@@ -339,7 +343,6 @@ endif()
 pkg_check_modules(LCMS REQUIRED lcms2>=2.6)
 pkg_check_modules(EXPAT REQUIRED expat>=2.1)
 pkg_check_modules(FFTW3F REQUIRED fftw3f)
-#pkg_check_modules(IPTCDATA REQUIRED libiptcdata)
 pkg_check_modules(TIFF REQUIRED libtiff-4>=4.0.4)
 find_package(JPEG REQUIRED)
 find_package(PNG REQUIRED)
@@ -584,7 +587,6 @@ else()
     set(TCMALLOC_LIBRARIES "" CACHE INTERNAL "" FORCE)
 endif()
 
-#add_subdirectory(rtexif)
 add_subdirectory(rtengine)
 add_subdirectory(rtgui)
 add_subdirectory(rtdata)
