--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -29,6 +29,7 @@ link_directories(
 set(CAMCONSTSFILE "camconst.json")
 
 set(RTENGINESOURCEFILES
+    badpixels.cc
     CA_correct_RT.cc
     EdgePreservingDecomposition.cc
     FTblockDN.cc
