started working on porting perspective correction from darktable

--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -139,6 +139,7 @@ set(RTENGINESOURCEFILES
     iptonemapping.cc
     metadata.cc
     iplabadjustments.cc
+    perspectivecorrection.cc
     )
 
 if(LENSFUN_HAS_LOAD_DIRECTORY)
