--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -146,6 +146,8 @@ if(LENSFUN_HAS_LOAD_DIRECTORY)
     set_source_files_properties(rtlensfun.cc PROPERTIES COMPILE_DEFINITIONS RT_LENSFUN_HAS_LOAD_DIRECTORY)
 endif()
 
+#set_source_files_properties(perspectivecorrection.cc PROPERTIES COMPILE_FLAGS -fpermissive)
+
 if(WITH_BENCHMARK)
     add_definitions(-DBENCHMARK)
 endif()
