--- a/rtdata/CMakeLists.txt
+++ b/rtdata/CMakeLists.txt
@@ -44,7 +44,7 @@ if(WIN32)
     install(FILES ${FONTS} DESTINATION "${DATADIR}/fonts")
 endif()
 
-install(DIRECTORY ${PROFILESDIR} DESTINATION "${DATADIR}" FILES_MATCHING PATTERN "*.pp3")
+install(DIRECTORY ${PROFILESDIR} DESTINATION "${DATADIR}" FILES_MATCHING PATTERN "*.arp")
 install(DIRECTORY ${THEMEDIR} DESTINATION "${DATADIR}")
 
 install(FILES ${IMG_SVG} DESTINATION "${DATADIR}/images")
