--- a/rtdata/CMakeLists.txt
+++ b/rtdata/CMakeLists.txt
@@ -25,13 +25,13 @@ if(WIN32)
 endif()
 
 if(UNIX)
-    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/rawtherapee.desktop.in" "${CMAKE_CURRENT_BINARY_DIR}/rawtherapee.desktop")
-    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/rawtherapee.desktop" DESTINATION ${DESKTOPDIR})
-    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/rawtherapee-logo-16.png" DESTINATION "${ICONSDIR}/hicolor/16x16/apps" RENAME rawtherapee.png)
-    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/rawtherapee-logo-24.png" DESTINATION "${ICONSDIR}/hicolor/24x24/apps" RENAME rawtherapee.png)
-    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/rawtherapee-logo-48.png" DESTINATION "${ICONSDIR}/hicolor/48x48/apps" RENAME rawtherapee.png)
-    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/rawtherapee-logo-128.png" DESTINATION "${ICONSDIR}/hicolor/128x128/apps" RENAME rawtherapee.png)
-    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/rawtherapee-logo-256.png" DESTINATION "${ICONSDIR}/hicolor/256x256/apps" RENAME rawtherapee.png)
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/ART.desktop.in" "${CMAKE_CURRENT_BINARY_DIR}/ART.desktop")
+    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/ART.desktop" DESTINATION ${DESKTOPDIR})
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/ART-logo-16.png" DESTINATION "${ICONSDIR}/hicolor/16x16/apps" RENAME ART.png)
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/ART-logo-24.png" DESTINATION "${ICONSDIR}/hicolor/24x24/apps" RENAME ART.png)
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/ART-logo-48.png" DESTINATION "${ICONSDIR}/hicolor/48x48/apps" RENAME ART.png)
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/ART-logo-128.png" DESTINATION "${ICONSDIR}/hicolor/128x128/apps" RENAME ART.png)
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/png/ART-logo-256.png" DESTINATION "${ICONSDIR}/hicolor/256x256/apps" RENAME ART.png)
 endif()
 
 install(FILES ${LANGUAGEFILES} DESTINATION "${DATADIR}/languages")
