Added HSL equalizer tool

--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -141,6 +141,7 @@ set(RTENGINESOURCEFILES
     metadata.cc
     iplabadjustments.cc
     perspectivecorrection.cc
+    iphsl.cc
     )
 
 if(LENSFUN_HAS_LOAD_DIRECTORY)
