fixed windows icon

--- a/tools/win/InnoSetup/WindowsInnoSetup.iss.in
+++ b/tools/win/InnoSetup/WindowsInnoSetup.iss.in
@@ -9,22 +9,22 @@
 ; Note that all *.dll files will be added, so be careful which DLLs are present
 ; in the folder before running this script.
 ;
-; This script searches for and bundles all "rawtherapee*.exe" files, allowing
+; This script searches for and bundles all "ART*.exe" files, allowing
 ; you to bundle a "release" as well as a "debug" version at the same time.
-; At least one "rawtherapee.exe" file is required.
+; At least one "ART.exe" file is required.
 ;
 ; This script is configured to check that the operating system's bit depth is
 ; the same as that of the executable file.
 ;
 ; The IA-64 architecture is not supported.
 
-#define MyAppName "RawTherapee"
+#define MyAppName "ART"
 #define MyAppVersion "${GIT_DESCRIBE}"
 #define MyAppVersionNumeric "${GIT_NUMERIC_VERSION_BS}"
-#define MyAppPublisher "rawtherapee.com"
-#define MyAppURL "http://www.rawtherapee.com/"
-#define MyAppExeName "rawtherapee.exe"
-#define MyAppCliExeName "rawtherapee-cli.exe"
+#define MyAppPublisher "ART"
+#define MyAppURL "http://bitbucket.org/agriggio/ART/"
+#define MyAppExeName "ART.exe"
+#define MyAppCliExeName "ART-cli.exe"
 #define MyBuildBasePath "${CMAKE_INSTALL_PREFIX}"
 #define MySourceBasePath "${PROJECT_SOURCE_DIR}"
 #define MyBitDepth "${BUILD_BIT_DEPTH}"
@@ -50,7 +50,7 @@ AllowNoIcons=yes
 LicenseFile={#MyBuildBasePath}\LICENSE.txt
 OutputDir={#MyBuildBasePath}\..\
 OutputBaseFilename={#MyAppName}_{#MyAppVersion}_{#MySystemName}_{#MyBitDepth}
-SetupIconFile={#MySourceBasePath}\rtdata\images\rawtherapee.ico
+SetupIconFile={#MySourceBasePath}\rtdata\images\ART.ico
 WizardImageFile={#MySourceBasePath}\tools\win\InnoSetup\installerStrip.bmp
 WizardImageBackColor=$2A2A2A
 Compression=lzma
@@ -86,17 +86,17 @@ Name: "spanish"; MessagesFile: "compiler:Languages\Spanish.isl"
 Name: "ukrainian"; MessagesFile: "compiler:Languages\Ukrainian.isl"
 
 [Tasks]
-Name: "userinstall"; Description: "Only me (Single User Install)"; GroupDescription: "Install RawTherapee for:"; Flags: exclusive unchecked
-Name: "commoninstall"; Description: "Anyone who uses this computer (Multi-User Install)"; GroupDescription: "Install RawTherapee for:"; Flags: exclusive; Check: IsElevatedUser
+Name: "userinstall"; Description: "Only me (Single User Install)"; GroupDescription: "Install ART for:"; Flags: exclusive unchecked
+Name: "commoninstall"; Description: "Anyone who uses this computer (Multi-User Install)"; GroupDescription: "Install ART for:"; Flags: exclusive; Check: IsElevatedUser
 Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: unchecked
 ;Name: "desktopicon\common"; Description: "For all users"; GroupDescription: "Additional icons:"; Flags: exclusive
 ;Name: "desktopicon\user"; Description: "For the current user only"; GroupDescription: "Additional icons:"; Flags: exclusive unchecked
 Name: "quicklaunchicon"; Description: "{cm:CreateQuickLaunchIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: unchecked; OnlyBelowVersion: 0,6.1
-Name: regBrowseFolder; Description: "Add ""Browse with RawTherapee"" option to context menu when right-clicking on a folder."; GroupDescription: File extensions:
-Name: regOpenFile; Description: "Add ""Open with RawTherapee"" option to context menu when right-clicking on a file."; GroupDescription: File extensions:
+Name: regBrowseFolder; Description: "Add ""Browse with ART"" option to context menu when right-clicking on a folder."; GroupDescription: File extensions:
+Name: regOpenFile; Description: "Add ""Open with ART"" option to context menu when right-clicking on a file."; GroupDescription: File extensions:
 
 [Files]
-Source: "{#MyBuildBasePath}\rawtherapee*.exe"; DestDir: "{app}"; Flags: ignoreversion
+Source: "{#MyBuildBasePath}\ART*.exe"; DestDir: "{app}"; Flags: ignoreversion
 Source: "{#MyBuildBasePath}\camconst.json"; DestDir: "{app}"; Flags: ignoreversion
 Source: "{#MyBuildBasePath}\dcpprofiles\*"; DestDir: "{app}\dcpprofiles\"; Flags: ignoreversion recursesubdirs createallsubdirs
 ;Source: "{#MyBuildBasePath}\etc\*"; DestDir: "{app}\etc\"; Flags: ignoreversion recursesubdirs createallsubdirs
@@ -133,17 +133,17 @@ Name: "{userappdata}\Microsoft\Internet Explorer\Quick Launch\{#MyAppName} {#MyA
 Filename: "{app}\{#MyAppExeName}"; Description: "{cm:LaunchProgram,{#StringChange(MyAppName, '&', '&&')}}"; Flags: nowait postinstall skipifsilent
 
 [Registry]
-Root: HKCU; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with RawTherapee"; ValueType: string; ValueData: "Browse with RawTherapee"; Flags: uninsdeletekey; Tasks: regBrowseFolder and userinstall
-Root: HKCU; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with RawTherapee\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -w ""%1"""; Flags: uninsdeletekey; Tasks: regBrowseFolder and userinstall
-Root: HKCU; Subkey: "SOFTWARE\Classes\*\shell\Open with RawTherapee"; ValueType: string; ValueData: "Open with RawTherapee"; Flags: uninsdeletekey; Tasks: regOpenFile and userinstall
-Root: HKCU; Subkey: "SOFTWARE\Classes\*\shell\Open with RawTherapee\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -R ""%1"""; Flags: uninsdeletekey; Tasks: regOpenFile and userinstall
+Root: HKCU; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with ART"; ValueType: string; ValueData: "Browse with ART"; Flags: uninsdeletekey; Tasks: regBrowseFolder and userinstall
+Root: HKCU; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with ART\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -w ""%1"""; Flags: uninsdeletekey; Tasks: regBrowseFolder and userinstall
+Root: HKCU; Subkey: "SOFTWARE\Classes\*\shell\Open with ART"; ValueType: string; ValueData: "Open with ART"; Flags: uninsdeletekey; Tasks: regOpenFile and userinstall
+Root: HKCU; Subkey: "SOFTWARE\Classes\*\shell\Open with ART\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -R ""%1"""; Flags: uninsdeletekey; Tasks: regOpenFile and userinstall
 Root: HKCU; Subkey: "SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\{#MyAppExeName}"; ValueType: string; ValueData: "{app}\{#MyAppExeName}"; Flags: uninsdeletekey; Tasks: userinstall
 Root: HKCU; Subkey: "SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\{#MyAppCliExeName}"; ValueType: string; ValueData: "{app}\{#MyAppCliExeName}"; Flags: uninsdeletekey; Tasks: userinstall
 
-Root: HKLM; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with RawTherapee"; ValueType: string; ValueData: "Browse with RawTherapee"; Flags: uninsdeletekey; Tasks: regBrowseFolder and commoninstall
-Root: HKLM; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with RawTherapee\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -w ""%1"""; Flags: uninsdeletekey; Tasks: regBrowseFolder and commoninstall
-Root: HKLM; Subkey: "SOFTWARE\Classes\*\shell\Open with RawTherapee"; ValueType: string; ValueData: "Open with RawTherapee"; Flags: uninsdeletekey; Tasks: regOpenFile and commoninstall
-Root: HKLM; Subkey: "SOFTWARE\Classes\*\shell\Open with RawTherapee\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -R ""%1"""; Flags: uninsdeletekey; Tasks: regOpenFile and commoninstall
+Root: HKLM; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with ART"; ValueType: string; ValueData: "Browse with ART"; Flags: uninsdeletekey; Tasks: regBrowseFolder and commoninstall
+Root: HKLM; Subkey: "SOFTWARE\Classes\Directory\shell\Browse with ART\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -w ""%1"""; Flags: uninsdeletekey; Tasks: regBrowseFolder and commoninstall
+Root: HKLM; Subkey: "SOFTWARE\Classes\*\shell\Open with ART"; ValueType: string; ValueData: "Open with ART"; Flags: uninsdeletekey; Tasks: regOpenFile and commoninstall
+Root: HKLM; Subkey: "SOFTWARE\Classes\*\shell\Open with ART\command"; ValueType: string; ValueData: "{app}\{#MyAppExeName} -R ""%1"""; Flags: uninsdeletekey; Tasks: regOpenFile and commoninstall
 Root: HKLM; Subkey: "SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\{#MyAppExeName}"; ValueType: string; ValueData: "{app}\{#MyAppExeName}"; Flags: uninsdeletekey; Tasks: commoninstall
 Root: HKLM; Subkey: "SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\{#MyAppCliExeName}"; ValueType: string; ValueData: "{app}\{#MyAppCliExeName}"; Flags: uninsdeletekey; Tasks: commoninstall
 
