added exiv2 info in AboutThisBuild

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -491,7 +491,8 @@ set(ABOUT_COMMAND_WITH_ARGS ${CMAKE_COMMAND}
     -DGTKMM_VERSION:STRING=${GTKMM_VERSION}
     -DOPTION_OMP:STRING=${OPTION_OMP}
     -DWITH_MYFILE_MMAP:STRING=${WITH_MYFILE_MMAP}
-    -DLENSFUN_VERSION:STRING=${LENSFUN_VERSION})
+    -DLENSFUN_VERSION:STRING=${LENSFUN_VERSION}
+    -DEXIV2_VERSION:STRING=${EXIV2_VERSION})
 
 if(WIN32)
     list(APPEND ABOUT_COMMAND_WITH_ARGS -DSYSTEM:STRING=Windows
