--- a/AboutThisBuild.txt.in
+++ b/AboutThisBuild.txt.in
@@ -8,6 +8,7 @@ System: ${SYSTEM}
 Bit depth: ${PROC_BIT_DEPTH}
 Gtkmm: V${GTKMM_VERSION}
 Lensfun: V${LENSFUN_VERSION}
+Exiv2: V${EXIV2_VERSION}
 Build type: ${BUILD_TYPE}
 Build flags: ${CXX_FLAGS}
 Link flags: ${LFLAGS}
