started reorganization of color profiles and camera color matrices

--- a/rtdata/CMakeLists.txt
+++ b/rtdata/CMakeLists.txt
@@ -39,6 +39,9 @@ install(FILES ${SOUNDFILES} DESTINATION "${DATADIR}/sounds")
 install(FILES ${INPUTICCFILES} DESTINATION "${DATADIR}/iccprofiles/input")
 install(FILES ${OUTPUTICCFILES} DESTINATION "${DATADIR}/iccprofiles/output")
 install(FILES ${DCPFILES} DESTINATION "${DATADIR}/dcpprofiles")
+install(FILES "cammatrices.json" DESTINATION "${DATADIR}")
+install(FILES "dcraw.json" DESTINATION "${DATADIR}")
+install(FILES "rt.json" DESTINATION "${DATADIR}")
 install(FILES ${OPTIONSFILE} DESTINATION "${DATADIR}" PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ RENAME options)
 if(WIN32)
     install(FILES ${FONTS} DESTINATION "${DATADIR}/fonts")
