Decoding for Panasonic DC-S1 and DC-S1R (ported from RT)

--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -97,6 +97,7 @@ set(RTENGINESOURCEFILES
     lcp.cc
     loadinitial.cc
     myfile.cc
+    panasonic_decoders.cc
     pipettebuffer.cc
     pixelshift.cc
     previewimage.cc
