lmmse demosaic: own compilation unit and some cleanups
(ported from RT)

--- a/rtengine/CMakeLists.txt
+++ b/rtengine/CMakeLists.txt
@@ -95,6 +95,7 @@ set(RTENGINESOURCEFILES
     klt/writeFeatures.cc
     labimage.cc
     lcp.cc
+    lmmse_demosaic.cc
     loadinitial.cc
     myfile.cc
     panasonic_decoders.cc
