use dynamic profiles by default for RAW images

--- a/rtdata/CMakeLists.txt
+++ b/rtdata/CMakeLists.txt
@@ -46,6 +46,8 @@ install(FILES ${OPTIONSFILE} DESTINATION "${DATADIR}" PERMISSIONS OWNER_WRITE OW
 if(WIN32)
     install(FILES ${FONTS} DESTINATION "${DATADIR}/fonts")
 endif()
+install(FILES "dynamicprofile.cfg" DESTINATION "${DATADIR}")
+
 
 install(DIRECTORY ${PROFILESDIR} DESTINATION "${DATADIR}" FILES_MATCHING PATTERN "*.arp")
 install(DIRECTORY ${THEMEDIR} DESTINATION "${DATADIR}")
