minor tweak to the InnoSetup script

--- a/tools/win/InnoSetup/WindowsInnoSetup.iss.in
+++ b/tools/win/InnoSetup/WindowsInnoSetup.iss.in
@@ -49,7 +49,7 @@ DefaultGroupName={#MyAppName}
 AllowNoIcons=yes
 LicenseFile={#MyBuildBasePath}\LICENSE.txt
 OutputDir={#MyBuildBasePath}\..\
-OutputBaseFilename={#MyAppName}_{#MyAppVersion}_{#MySystemName}_{#MyBitDepth}
+OutputBaseFilename={#MyAppName}_{#MyAppVersion}_{#MySystemName}{#MyBitDepth}
 SetupIconFile={#MySourceBasePath}\rtdata\images\ART.ico
 WizardImageFile={#MySourceBasePath}\tools\win\InnoSetup\installerStrip.bmp
 WizardImageBackColor=$2A2A2A
